Added hard level

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <p class="score"></p>
     </div>
     <div class="container">
+      <form>
+        <p>Easy</p>
+        <div class="toggle">
+          <input id="switch" type="checkbox" class="checkbox" />
+          <label for="switch" class="checkbox-label"></label>
+        </div>
+        <p>Hard</p>
+      </form>
       <div class="board">
         <!-- <div class="card">
           <div class="card-back"></div>
