Separated out image arrays to js files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       <button id="start-btn">Start New Game</button>
     </div>
 
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
