Score now gets added to history after game ends

--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
       <button id="start-btn">Start New Game</button>
     </div>
 
+    <div class="score-history-container">
+      <h1>History</h1>
+      <header>
+        <h3>Level</h3>
+        <h3>Turns</h3>
+      </header>
+      <div class="scores-container">
+        <!-- <div class="score-display">
+          <div class="level">Easy</div>
+          <div class="num-turns">11</div>
+        </div>
+        <div class="score-display">
+          <div class="level">Easy</div>
+          <div class="num-turns">11</div>
+        </div>
+        <div class="score-display">
+          <div class="level">Easy</div>
+          <div class="num-turns">11</div>
+        </div> -->
+      </div>
+    </div>
+
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
