Added stupid game over graphics that I will later change

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <p class="score"></p>
     </div>
     <div class="container">
+      <!-- <img
+        src="./img/congrats-1.svg"
+        alt="Congratulations!"
+        class="game-over-fun"
+      /> -->
       <form>
         <p>Easy</p>
         <div class="toggle">
