Added local storage

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <div class="num-turns">11</div>
         </div> -->
       </div>
+      <button id="clear-history">Clear History</button>
     </div>
 
     <script type="module" src="js/main.js"></script>
