--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
       <p class="score"></p>
     </div>
     <div class="container">
-      <!-- <img
-        src="./img/congrats-1.svg"
-        alt="Congratulations!"
-        class="game-over-fun"
-      /> -->
+      <!-- <div class="congrats best"></div> -->
+      <!-- <img src="./img/arrow.svg" alt="Start a New Game!" class="arrow" /> -->
       <form>
         <p>Easy</p>
         <div class="toggle">
