Oops, forgot to remove temporary hard coded items

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <p class="score"></p>
     </div>
     <div class="container">
-      <div class="congrats best"></div>
-      <img src="./img/arrow.svg" alt="Start a New Game!" class="arrow" />
+      <!-- <div class="congrats best"></div> -->
+      <!-- <img src="./img/arrow.svg" alt="Start a New Game!" class="arrow" /> -->
       <form>
         <p>Easy</p>
         <div class="toggle">
