Moved arrow to div with start game button instead

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </div>
     <div class="container">
       <!-- <div class="congrats best"></div> -->
-      <!-- <img src="./img/arrow.svg" alt="Start a New Game!" class="arrow" /> -->
       <form>
         <p>Easy</p>
         <div class="toggle">
@@ -37,7 +36,10 @@
           <div class="card-front"><img src="./img/banana.svg" alt="" /></div>
         </div> -->
       </div>
-      <button id="start-btn">Start New Game</button>
+      <div class="button-container">
+        <!-- <img src="./img/arrow.svg" alt="Start a New Game!" class="arrow" /> -->
+        <button id="start-btn">Start New Game</button>
+      </div>
     </div>
 
     <div class="score-history-container">
