--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- FB Share Graphic -->
-    <meta property="og:title" content="  TITLE  HERE  " />
+    <meta property="og:title" content="Memory Game" />
     <meta property="og:image" content="  IMAGE URL  HERE  " />
   </head>
 
