added aria labels to icon contact links, sizing to images in html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Memory Game</title>
-  <meta name="description" content="" />
+  <meta name="description" content="Test your memory with the Monster Match game!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Brandi Cameron | hello@brandicameron.com" />
   <meta name="theme-color" content="#ffffff" />
@@ -78,9 +78,12 @@
       <span class="copyright" id="copyright-year"></span>
     </div>
     <div class="contact-buttons">
-      <a href="https://twitter.com/BrandiLCameron"><img src="./img/icons/twitter.svg" alt="" class="icon"></a>
-      <a href="https://github.com/brandicameron"><img src="./img/icons/github.svg" alt="" class="icon"></a>
-      <a href="mailto:hello@brandicameron.com"><img src="./img/icons/email.svg" alt="" class="icon"></a>
+      <a href="https://twitter.com/BrandiLCameron" aria-label="Find Brandi on Twitter"><img
+          src="./img/icons/twitter.svg" alt="" class="icon"></a>
+      <a href="https://github.com/brandicameron" aria-label="Find Brandi on Github"><img src="./img/icons/github.svg"
+          alt="" class="icon"></a>
+      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg" alt=""
+          class="icon"></a>
     </div>
 
   </footer>
