added size to contact icons and label tags to toggle switch

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div class="container">
       <!-- <div class="congrats best"></div> -->
       <form>
-        <p>Easy</p>
+        <label for="switch">Easy</label>
         <div class="toggle">
           <input id="switch" type="checkbox" class="checkbox" />
           <label for="switch" class="checkbox-label"></label>
         </div>
-        <p>Hard</p>
+        <label for="switch">Hard</label>
       </form>
       <div class="board">
         <!-- <div class="card">
@@ -79,11 +79,11 @@
     </div>
     <div class="contact-buttons">
       <a href="https://twitter.com/BrandiLCameron" aria-label="Find Brandi on Twitter"><img
-          src="./img/icons/twitter.svg" alt="" class="icon"></a>
+          src="./img/icons/twitter.svg" width="50" height="50" alt="" class="icon"></a>
       <a href="https://github.com/brandicameron" aria-label="Find Brandi on Github"><img src="./img/icons/github.svg"
-          alt="" class="icon"></a>
-      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg" alt=""
-          class="icon"></a>
+          width="50" height="50" alt="" class="icon"></a>
+      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg" width="50"
+          height="50" alt="" class="icon"></a>
     </div>
 
   </footer>
