--- a/index.html
+++ b/index.html
@@ -72,18 +72,21 @@
   </main>
 
   <footer>
-    <a href='https://www.freepik.com/vectors'>Monster &amp; star vectors created by macrovector - www.freepik.com</a>
+    <div class="footer-shape"></div>
+    <a href='https://www.freepik.com/vectors' target="blank">Monster &amp; star vectors created by macrovector -
+      www.freepik.com</a>
     <div class="copyright">
-      Everything else designed &amp; developed by Brandi Cameron in
+      Everything else designed &amp; developed by <a href="https://brandicameron.com/" target="blank"><u>Brandi
+          Cameron</u></a> in
       <span class="copyright" id="copyright-year"></span>
     </div>
     <div class="contact-buttons">
-      <a href="https://twitter.com/BrandiLCameron" aria-label="Find Brandi on Twitter"><img
-          src="./img/icons/twitter.svg" width="50" height="50" alt="" class="icon"></a>
-      <a href="https://github.com/brandicameron" aria-label="Find Brandi on Github"><img src="./img/icons/github.svg"
-          width="50" height="50" alt="" class="icon"></a>
-      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg" width="50"
-          height="50" alt="" class="icon"></a>
+      <a href="https://twitter.com/BrandiLCameron" target="blank" aria-label="Find Brandi on Twitter"><img
+          src="./img/icons/twitter.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+      <a href="https://github.com/brandicameron" target="blank" aria-label="Find Brandi on Github"><img
+          src="./img/icons/github.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg"
+          aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
     </div>
 
   </footer>
