added 404 page, changed titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Memory Game</title>
+  <title>Monster Match Memory Game</title>
   <meta name="description" content="Test your memory with the Monster Match game!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Brandi Cameron | hello@brandicameron.com" />
@@ -17,11 +17,11 @@
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5c58ce">
   <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="theme-color" content="#ffffff">
-
-  <!-- FB Share Graphic -->
   <meta property="og:title" content="Play the Monster Match Memory Game!" />
   <meta property="og:image" content="./img/share.jpg" />
 </head>
+
+<!-- Commented out code is templates for javascript -->
 
 <body>
   <div class="stars"></div>
@@ -88,7 +88,6 @@
       <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg"
           aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
     </div>
-
   </footer>
 
   <script type="module" src="js/main.js"></script>
