--- a/404.html
+++ b/404.html
@@ -1,64 +1,57 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html class="no-js" lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Page Not Found</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    * {
-      line-height: 1.4;
-      margin: 0;
-    }
-
-    html {
-      color: #888;
-      display: table;
-      font-family: sans-serif;
-      height: 100%;
-      text-align: center;
-      width: 100%;
-    }
-
-    body {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 2em auto;
-    }
-
-    h1 {
-      color: #555;
-      font-size: 2em;
-      font-weight: 400;
-			padding-bottom: 10px;
-			margin-top: -8vh;
-    }
-
-    p {
-      margin: 0 auto;
-      width: 220px;
-    }
-
-    @media only screen and (max-width: 280px) {
-
-      body,
-      p {
-        width: 95%;
-      }
-
-      h1 {
-        font-size: 1.5em;
-        margin: 0 0 0.3em;
-      }
-
-    }
-  </style>
+  <meta charset="utf-8" />
+  <title>Where did Monster Match go???</title>
+  <meta name="description" content="You're lost!" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Brandi Cameron | hello@brandicameron.com" />
+  <meta name="theme-color" content="#ffffff" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/styles.min.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5c58ce">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="theme-color" content="#ffffff">
+  <meta property="og:title" content="Play the Monster Match Memory Game!" />
+  <meta property="og:image" content="./img/share.jpg" />
 </head>
 
-<body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+
+<body class="content">
+  <div class="stars"></div>
+  <img src="./img/logo.svg" alt="Monster Match Logo" class="logo">
+
+  <main class="lost-message">
+    <h1>Omg we're lost!!</h1>
+    <img class="lost-monster" src="./img/lost-monster.svg" width="200" height="100"
+      alt="Cute orange monster with shocked face becuase, you know, he's lost.">
+    <a class="link-button" href="/">Go Back Home!</a>
+  </main>
+
+  <footer class="push-footer">
+    <div class="footer-shape"></div>
+    <a href='https://www.freepik.com/vectors' target="blank">Monster &amp; star vectors created by macrovector -
+      www.freepik.com</a>
+    <div class="copyright">
+      Everything else designed &amp; developed by <a href="https://brandicameron.com/" target="blank"><u>Brandi
+          Cameron</u></a> in
+      <span class="copyright" id="copyright-year"></span>
+    </div>
+    <div class="contact-buttons">
+      <a href="https://twitter.com/BrandiLCameron" target="blank" aria-label="Find Brandi on Twitter"><img
+          src="./img/icons/twitter.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+      <a href="https://github.com/brandicameron" target="blank" aria-label="Find Brandi on Github"><img
+          src="./img/icons/github.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg"
+          aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+    </div>
+  </footer>
+
 </body>
 
 </html>
-<!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
