refactored some js

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
     <a href='https://www.freepik.com/vectors' target="blank">Monster &amp; star vectors created by macrovector -
       www.freepik.com</a>
     <div class="copyright">
-      Everything else designed &amp; developed by <a href="https://brandicameron.com/" target="blank"><u>Brandi
-          Cameron</u></a> in
-      <span class="copyright" id="copyright-year"></span>
+      Everything else designed &amp; developed by <a href="https://brandicameron.com/"
+        aria-label="Visit Brandi's portfolio website." target="blank"><u>Brandi Cameron</u></a> in 2021
     </div>
     <div class="contact-buttons">
       <a href="https://twitter.com/BrandiLCameron" target="blank" aria-label="Find Brandi on Twitter"><img
