added readme with demo gif

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
   <footer>
     <div class="footer-shape"></div>
-    <a href='https://www.freepik.com/vectors' target="blank">Monster &amp; star vectors created by macrovector -
+    <a href='https://www.freepik.com/free-vector/monster-character-set_1538770.htm#page=1&query=monsters&position=28'
+      target="blank">Monster &amp; star vectors created by macrovector -
       www.freepik.com</a>
     <div class="copyright">
       Everything else designed &amp; developed by <a href="https://brandicameron.com/"
