changed contact icons to a sprite

--- a/index.html
+++ b/index.html
@@ -76,17 +76,16 @@
     <a href='https://www.freepik.com/free-vector/monster-character-set_1538770.htm#page=1&query=monsters&position=28'
       target="blank">Monster &amp; star vectors created by macrovector -
       www.freepik.com</a>
-    <div class="copyright">
+    <p>
       Everything else designed &amp; developed by <a href="https://brandicameron.com/"
         aria-label="Visit Brandi's portfolio website." target="blank"><u>Brandi Cameron</u></a> in 2021
-    </div>
+    </p>
     <div class="contact-buttons">
-      <a href="https://twitter.com/BrandiLCameron" target="blank" aria-label="Find Brandi on Twitter"><img
-          src="./img/icons/twitter.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
-      <a href="https://github.com/brandicameron" target="blank" aria-label="Find Brandi on Github"><img
-          src="./img/icons/github.svg" aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
-      <a href="mailto:hello@brandicameron.com" aria-label="Email Brandi"><img src="./img/icons/email.svg"
-          aria-hidden="true" width="50" height="50" alt="" class="icon"></a>
+      <a href="https://twitter.com/BrandiLCameron" class="icon twitter-icon" target="blank"
+        aria-label="Find Brandi on Twitter"></a>
+      <a href="https://github.com/brandicameron" class="icon github-icon" target="blank"
+        aria-label="Find Brandi on Github"></a>
+      <a href="mailto:hello@brandicameron.com" class="icon email-icon" aria-label="Email Brandi"></a>
     </div>
   </footer>
 
