fixed 404 home button link

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     <h1>Omg we're lost!!</h1>
     <img class="lost-monster" src="./img/lost-monster.svg" width="200" height="100"
       alt="Cute orange monster with shocked face becuase, you know, he's lost.">
-    <a class="link-button" href="/">Go Back Home!</a>
+    <a class="link-button" href="index.html">Go Back Home!</a>
   </main>
 
   <footer class="push-footer">
